--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span class="seconds">00</span>
       </div>
       <div class="progress">
-        <p class="line"></p>
+        <div class="line"></div>
       </div>
       <div class="buttons">
         <button class="btn-start">Start</button>
